[package]
name = "openfx-sys"
version = "0.1.0"
edition = "2021"
authors = ["Simon Gauvin <gauvinsimon@gmail.com>"]
description = "Rust bindings for OpenFX"
readme = "README.md"
repository = "https://github.com/SGauvin/openfx-sys"
license = "MIT OR Apache-2.0"
keywords = ["openfx", "vfx"]

[dependencies]
libc = "0.2.139"

[build-dependencies]
bindgen = "0.64.0"
